# iocipher_pack

./: .gitignore  README.md  compile_docker_all.sh  compile_other_components.sh
.github/workflows/: android_app.yml  ci.yml  dep_sqlcipher.yml  dep_sqlite.yml  filemanager.yml  python_app.yml
001_src_openssl/: .gitignore
001_src_openssl/.localrun/: .gitignore  Dockerfile_deb12  docker_linux_fast.sh  docker_win_fast.sh
002_src_libsqlfs/: .gitignore  Makefile  sqlfs.c  sqlfs_internal.h
002_src_libsqlfs/.localrun/: .gitignore  Dockerfile_deb12  Dockerfile_win_deb12  docker_linux_fast.sh  (+1 more)
003_src_iocipher/: .gitignore  build.gradle  gradle.properties  settings.gradle
003_src_iocipher/libiocipher2-c/src/main/cpp/: CMakeLists.txt  JNIHelp.cpp  JNIHelp.h  info_guardianproject_iocipher_File.cpp  info_guardianproject_iocipher_VirtualFileSystem.cpp  info_guardianproject_libcore_io_Posix.cpp
003_src_iocipher/libiocipher2-c/src/main/cpp/libsqlfs/: sqlfs.h  sqlfs_internal.h
004_example_jvm/: .gitignore  FileDrop.java  FileList.java  FileManager.java  FileRenderer.java  MinialExample.java  TextFileFilter.java  do_compile_and_run.sh  do_miniexample_compile_and_run.sh
005_example_c/: .gitignore  c_example.c  do_compile_and_run.sh  sqlfs.h  sqlfs_internal.h
005_example_c_win64/: c_example_win64.c  do_compile_and_run.sh
006_example_python/: .gitignore  do_compile_and_run.sh  iocipher_example.py  sqlfs.h  sqlfs_python_helper.c
007_example_android/: build.gradle  settings.gradle
tools/: check_java_classes_version.sh  check_libs_for_correct_sqlite_version.sh  check_sqlite.sh  commit_and_tag_new_release_version.sh  download_sqlcipher_amalgamation.sh  download_sqlite_amalgamation.sh  prepare_new_release_version.sh
(+67 files in other folders)
